[MINOR] Fix code generator (templates, existing ops, input ordering)